--- a/index.html
+++ b/index.html
@@ -149,12 +149,25 @@
             let questionHeaderHTML = `<p class="font-bold text-lg text-gray-800">${data.question}</p>`;
             let qBodyHTML = '';
             switch (data.type) {
-                case 'simple': qBodyHTML = `<input type="text" id="user-answer" class="w-full sm:w-2/3 p-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-400">`; break;
+                case 'simple':
+                    qBodyHTML = `<input type="text" id="user-answer" class="w-full sm:w-2/3 p-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-400">`;
+                    break;
                 case 'single-choice': qBodyHTML = `<div id="user-answer" class="space-y-2">${data.options.map((opt, i) => `<label class="flex items-center p-3 rounded-lg hover:bg-gray-50 border cursor-pointer"><input type="radio" name="option" value="${i}" class="h-5 w-5 text-blue-600"><span class="ml-3 text-gray-700">${opt}</span></label>`).join('')}</div>`; break;
                 case 'multiple-choice': qBodyHTML = `<div id="user-answer" class="space-y-2">${data.options.map((opt, i) => `<label class="flex items-center p-3 rounded-lg hover:bg-gray-50 border cursor-pointer"><input type="checkbox" name="option" value="${i}" class="h-5 w-5 text-blue-600 rounded"><span class="ml-3 text-gray-700">${opt}</span></label>`).join('')}</div>`; break;
                 case 'fill-in-blank': const parts = data.question.split('[___]'); questionHeaderHTML = `<p class="font-bold text-lg text-gray-800 flex flex-wrap items-center leading-loose">${parts.map((part, i) => `<span>${part}</span>${i < parts.length - 1 ? `<input type="text" name="blank-${i}" class="inline-block w-32 sm:w-40 mx-1 p-1 border-b-2 border-gray-300 bg-gray-50 text-center">` : ''}`).join('')}</p>`; qBodyHTML = ''; break;
                 case 'essay': qBodyHTML = `<textarea id="user-answer" rows="5" class="w-full p-3 border border-gray-300 rounded-md" placeholder="ここに回答を入力"></textarea>`; break;
                 case 'sub-questions-choice': qBodyHTML = `<div id="user-answer" class="space-y-6">${data.sub_questions.map((subQ, subIndex) => `<div class="pl-4 border-l-2"><p class="font-semibold text-gray-800 mb-2">${subQ.text}</p><div class="space-y-2">${subQ.options.map((opt, i) => `<label class="flex items-center p-3 rounded-lg hover:bg-gray-50 border cursor-pointer"><input type="radio" name="sub-option-${subIndex}" value="${i}" class="h-5 w-5 text-blue-600"><span class="ml-3 text-gray-700">${opt}</span></label>`).join('')}</div></div>`).join('')}</div>`; break;
+                case 'descriptive':
+                    if (data.fields_count && data.fields_count > 1) {
+                        qBodyHTML = '<div id="user-answer" class="space-y-2">' +
+                            Array.from({length: data.fields_count}).map((_, i) =>
+                                `<input type="text" name="user-answer-field" class="w-full sm:w-2/3 p-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-400" placeholder="解答${i+1}">`
+                            ).join('') +
+                            '</div>';
+                    } else {
+                        qBodyHTML = `<input type="text" id="user-answer" class="w-full sm:w-2/3 p-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-400">`;
+                    }
+                    break;
             }
             singleQuestionContainer.innerHTML = `<div class="bg-white p-6 rounded-xl shadow-md border fade-in"><div class="flex items-start"><div class="flex-shrink-0 bg-blue-500 text-white rounded-full w-10 h-10 flex items-center justify-center font-bold text-xl mr-4">${currentQuestionIndex + 1}</div><div class="flex-grow">${questionHeaderHTML}${data.image ? `<div class="my-4"><img src="${data.image}" alt="問題画像" class="max-w-full h-auto mx-auto rounded-lg shadow-sm border" onerror="this.style.display='none'"></div>` : ''}${qBodyHTML ? `<div class="mt-4" id="q-body-container">${qBodyHTML}</div>` : ''}</div></div></div>`;
             navigationContainer.innerHTML = `<button id="submit-answer-btn" class="bg-blue-600 text-white font-bold py-3 px-12 rounded-lg hover:bg-blue-700">回答を提出</button>`;
