--- a/index.html
+++ b/index.html
@@ -287,7 +287,16 @@
                 case 'multiple-choice': const checkboxes = document.querySelectorAll('input[name="option"]:checked'); const userAnswers = Array.from(checkboxes).map(cb => parseInt(cb.value)).sort(); const correctAnswers = [...data.answer].sort(); isCorrect = JSON.stringify(userAnswers) === JSON.stringify(correctAnswers); break;
                 case 'fill-in-blank': let allCorrect = true; data.answers.forEach((ans, i)=>{const input=document.querySelector(`input[name="blank-${i}"]`); if(!input||input.value.trim().toLowerCase()!==ans.toLowerCase()) allCorrect=false;}); isCorrect=allCorrect; break;
                 case 'essay': isCorrect = null; break;
-                case 'sub-questions-choice': { let subScore = 0; data.sub_questions.forEach((subQ, i) => { const subRadio = document.querySelector(`input[name="sub-option-${i}"]:checked`); if (subRadio && parseInt(subRadio.value) === subQ.answer) subScore++; }); isCorrect = subScore === data.sub_questions.length; break; }
+                case 'sub-questions-choice': {
+                    let subScore = 0;
+                    data.sub_questions.forEach((subQ, i) => {
+                        const subRadio = document.querySelector(`input[name="sub-option-${i}"]:checked`);
+                        if (subRadio && parseInt(subRadio.value) === subQ.answer) subScore++;
+                    });
+                    isCorrect = subScore === data.sub_questions.length;
+                    sessionResults[currentQuestionIndex] = { question: data, isCorrect: isCorrect, subScore: subScore };
+                    break;
+                }
                 case 'descriptive': {
                     const userAnswerTexts = [];
                     if (data.fields_count && data.fields_count > 1) {
@@ -318,7 +327,19 @@
                 case 'multiple-choice': resultHTML = `正解: ${data.answer.map(i=>data.options[i]).join(', ')}`; break;
                 case 'fill-in-blank': resultHTML=`正解: ${data.answers.join(', ')}`; break;
                 case 'essay': resultHTML = `<p class="font-semibold">模範解答:</p><p class="mt-1 p-3 bg-blue-50 rounded-md border">${data.exampleAnswer}</p>`; break;
-                case 'sub-questions-choice': { let subQuestionResultsHTML = '<div class="space-y-4 mt-4">'; data.sub_questions.forEach((subQ, i) => { const subRadio = document.querySelector(`input[name="sub-option-${i}"]:checked`); const subIsCorrect = subRadio && parseInt(subRadio.value) === subQ.answer; const userAnswerText = subRadio ? subQ.options[subRadio.value] : '（未選択）'; subQuestionResultsHTML += `<div class="pl-4 border-l-2 ${subIsCorrect ? 'border-green-500' : 'border-red-500'}"><p class="font-semibold text-gray-800">${subQ.text}</p><p class="text-sm mt-1">あなたの回答: ${userAnswerText}</p><p class="text-sm mt-1 font-bold ${subIsCorrect ? 'text-green-700' : 'text-red-700'}">正解: ${subQ.options[subQ.answer]}</p>${subQ.explanation ? `<p class="text-sm mt-1 text-gray-500">解説: ${subQ.explanation}</p>` : ''}</div>`; }); subQuestionResultsHTML += '</div>'; resultHTML = `<p class="font-bold">あなたの得点: ${subScore} / ${data.sub_questions.length}</p>${subQuestionResultsHTML}`; break; }
+                case 'sub-questions-choice': {
+                    const subScore = sessionResults[currentQuestionIndex]?.subScore ?? 0;
+                    let subQuestionResultsHTML = '<div class="space-y-4 mt-4">';
+                    data.sub_questions.forEach((subQ, i) => {
+                        const subRadio = document.querySelector(`input[name="sub-option-${i}"]:checked`);
+                        const subIsCorrect = subRadio && parseInt(subRadio.value) === subQ.answer;
+                        const userAnswerText = subRadio ? subQ.options[subRadio.value] : '（未選択）';
+                        subQuestionResultsHTML += `<div class="pl-4 border-l-2 ${subIsCorrect ? 'border-green-500' : 'border-red-500'}"><p class="font-semibold text-gray-800">${subQ.text}</p><p class="text-sm mt-1">あなたの回答: ${userAnswerText}</p><p class="text-sm mt-1 font-bold ${subIsCorrect ? 'text-green-700' : 'text-red-700'}">正解: ${subQ.options[subQ.answer]}</p>${subQ.explanation ? `<p class="text-sm mt-1 text-gray-500">解説: ${subQ.explanation}</p>` : ''}</div>`;
+                    });
+                    subQuestionResultsHTML += '</div>';
+                    resultHTML = `<p class="font-bold">あなたの得点: ${subScore} / ${data.sub_questions.length}</p>${subQuestionResultsHTML}`;
+                    break;
+                }
                 case 'descriptive': resultHTML = `解答のポイント: ${data.answer_groups.map(g => g.join('/')).join('、')}`; break;
             }
 
